--- a/第 1-3 课 Spring Boot 依赖环境和项目结构介绍/hello/pom.xml
+++ b/第 1-3 课 Spring Boot 依赖环境和项目结构介绍/hello/pom.xml
@@ -45,6 +45,14 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
