--- a/第 1-4 课：写一个 Hello World 来感受 Spring Boot/hello/pom.xml
+++ b/第 1-4 课：写一个 Hello World 来感受 Spring Boot/hello/pom.xml
@@ -44,6 +44,14 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
