--- a/第 2-2 课 Spring Boot 项目中使用 JSP/spring-boot-jsp/pom.xml
+++ b/第 2-2 课 Spring Boot 项目中使用 JSP/spring-boot-jsp/pom.xml
@@ -57,6 +57,15 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
 		</dependency>
 	</dependencies>
 
