--- a/第 2-6 课：使用 Spring Boot 和 Thymeleaf 演示上传文件/spring-boot-file-upload/pom.xml
+++ b/第 2-6 课：使用 Spring Boot 和 Thymeleaf 演示上传文件/spring-boot-file-upload/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.5.6</version>
     </parent>
 
     <properties>
@@ -33,6 +33,19 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 
     </dependencies>
 
