--- a/第 5-3 课： Spring Boot Admin 的使用/spring-boot-admin/spring-boot-admin-server/pom.xml
+++ b/第 5-3 课： Spring Boot Admin 的使用/spring-boot-admin/spring-boot-admin-server/pom.xml
@@ -28,6 +28,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
